Fix overflow issue of select boxed

--- a/app/assets/stylesheets/chart-styles.scss
+++ b/app/assets/stylesheets/chart-styles.scss
@@ -55,6 +55,12 @@ $light-purple: lighten($dark-purple, 25%);
     &.chart-sidebar {
       max-height: 100%;
       color: $dark-purple;
+      .bootstrap-select.btn-group .dropdown-toggle .filter-option {
+        width: 140px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
       .btn {
         &.btn-primary {
           background-color: $light-blue;
